
----- cvs ci ------
Sat Jan 27 15:22:41 NOVT 2001
max:
* forwardRequestMask, denyFwdMask, denyFwdFile tokens

----- cvs ci ------
Sat Jan 20 21:56:54 NOVT 2001
max:
+ autopassive token

----- cvs ci ------
Mon Jan 15 14:19:26 NOVT 2001
max:
+ linkmsgbasedir token
+ mask support in echoArea links (auto-mandatory users)
+ -sbadd() -sbign() echoArea options
+ createFwdNonPass

----- cvs ci ------
Wed Jan  3 15:40:56 UTC 2001
sms:
- fixed some typos in the docs

----- cvs ci ------
Tue Jan  2 12:06:15 UTC 2001
sms:
+ dumping packNetmail and maxUnpackedNetmail

----- cvs ci ------
Mon Dec 25 19:15:50 EET 2000 
dmitry:
+ added processing of tokens packNetmail & maxUnpackedNetmail in tparser

----- cvs ci ------
Mon Dec 18 23:54:19 NOVT 2000
max (patch from Serguei Revtov):
* compilation fidoconf.c with Watcom/W32

----- cvs ci ------
Fri Dec 15 14:06:20 NOVT 2000
max:
* getDescription() code clean up

----- cvs ci ------
Wed Dec 13 18:34:56 UTC 2000
sms:
+ support for long area descriptions

----- cvs ci ------
Sat Dec  9 20:35:07 NOVT 2000
max:
* token kludgeAreaNetmail < kill | ignore | echomail >

----- cvs ci ------
Sat Dec  9 08:57:16 UTC 2000
dmitry:
+ added docs about tokens packNetmail & maxUnpackedNetmail for bsopack

----- cvs ci ------
Fri Dec  8 04:41:07 UTC 2000
sms:
* string2addr: check if string is non-NULL first

----- cvs ci ------
Fri Dec  8 02:39:38 UTC 2000
sms:
* fixed typo in tparser.c

----- cvs ci ------
Fri Dec  8 01:20:34 UTC 2000
sms:
+ added dirlist option to keyword filelist

----- cvs ci ------
Thu Dec  7 22:21:25 UTC 2000
sms:
+ added keyword filelist

----- cvs ci ------
Thu Dec  7 21:12:01 UTC 2000
sms:
* fixed memory hole in freeLink

----- cvs ci ------
Tue Dec  5 05:54:22 UTC 2000
sms:
+ dumping fileareas and bbsareas

----- cvs ci ------
Tue Dec  5 03:17:40 UTC 2000
sms:
! replaced most stricmp-calls with strcmp-calls on the lower case variant
  of the variable (parsing should be significantly faster now)